# qt_play

./: .clang-format  CMakeLists.txt  ElemTest.qml  README.md  data.json  flights-1.json  flights-1_SER.json  flights-1_SER_.json  flights-2.json  flights-2_SER.json  flights-2_SER_.json  flights-serialize.json  flights.json  main.cpp  main.qml
0_test/: 1.txt  2.txt  4.txt  5.txt  6.txt  fl.cs  newf.txt  user.cs
Classes/: bookitem.cpp  bookitem.h  booklist.cpp  booklist.h
Components/: BookListCtrl.qml  InternetConnectinTest.qml
Components/Catering/: CaterNavControl.qml  CaterPlane.qml  CaterSeat.qml  caterPlaneViewModel.cpp  caterPlaneViewModel.h  caterSeatViewModel.h
Components/DragTest/: DragDropTest.qml
Components/Flights/: FlightListControl.qml  FlightsList.qml  flight.h  flightslistmodel.cpp  flightslistmodel.h
Components/JsonList/: JsonHttpComp.qml  JsonListComp.qml
Components/MainLayout/: LayoutCtrl.qml
Components/PersonList/: PersonEditCtrl.qml  PersonListCtrl.qml  person.cpp  person.h  personlistmodel.cpp  personlistmodel.h
Components/PlaneMap/: FlickPlan.qml  PlaneMap.qml  colorImageProvider.h  liveimageprovider.cpp  liveimageprovider.h
Components/PlaneMap/OpGlItem/: OGLItem.qml  glitem.cpp  glitem.h
Components/PlaneMap/PaintedItem/: AirPlaneMap.qml  AirPlaneNavControl.qml  AirPlaneViewControl.qml  airplaneDrawer.cpp  airplaneDrawer.h  airplaneNavDrawer.cpp  airplaneNavDrawer.h  airplaneViewModel.cpp  airplaneViewModel.h  paintArea.h
Components/PlaneMap/PaintedItem/src/: airplaneLayoutContants.h  cardServiceType.h  drawHelper.h  frameRateCalc.h  planeColors.h  planeItemBase.cpp  planeItemBase.h  planeItemChair.cpp  planeItemChair.h  planeItemExit.cpp  planeItemExit.h  planeLayoutParser.h  planeLayoutSearcher.h  planeMap.cpp  planeMap.h  planeNavDrawer.h  planePassengers.h  renderBuffer.h  spriteCache.h
Components/PlaneMap/PaintedItem/src/planeItems/: drawHelper.h  planeItemBase.cpp  planeItemBase.h  planeItemChair.cpp  planeItemChair.h  planeItemExit.cpp  planeItemExit.h  planeItemLine.cpp  planeItemLine.h  planeItemRowNumber.cpp  planeItemRowNumber.h  planeItemText.cpp  planeItemText.h
Components/Test/: PersonEditDialog.qml  TableListJsonTest.qml  derivedDeserializeTest.h  jsonlistmodel.cpp  jsonlistmodel.h  testAsyncCall.h
Components/Test/reportGroupElements/: flightCatering.h
DataSources/: appMessageBus.cpp  appMessageBus.h
Utils/: boolinq.h  datasamples.cpp  datasamples.h  futureManager.h  futureManager2.h  futureManager2Test.h  futureManagerTest.h  internetChecker.cpp  internetChecker.h  nameoff.h  sharedListItem.h  sharedQList.h
Utils/HttpRequester/: httpRequester.cpp  httpRequester.h
Utils/JsonHelper/: FileHelper.h  JsonHelper.h  JsonSerialization.h  qqmlhelper.h  serializationBinder.h
Utils/QmlTools/JSONListModel/: JSONListModel.qml
Utils/webSock/: wsClient.h
